# ghana-voice-builder

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: metadata_example.csv
ghanavoice/: cli.py  data.py  export_onnx.py  infer.py  languages.py  prepare.py  train.py  vocoder.py
matcha/utils/: __init__.py  utils.py
matcha/utils/monotonic_align/: core.c  setup.py
